--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/fonts.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fakestore</title>
+    <title>Fakestore</title>
   </head>
   <body>
     <div id="root"></div>
